--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ O empreendedorismo criativo é um processo de desenvolvimento de negócios que s
 
 <p>Modelagem de negócios é o processo de desenvolvimento de um plano de negócios. Ele envolve a identificação dos recursos e atividades necessárias para um negócio ter sucesso, bem como os custos associados. A modelagem de negócios também envolve a definição de metas e a avaliação dos riscos e custos para ajudar a maximizar o lucro. Ela é uma ferramenta útil para desenvolver e ajustar modelos de negócios que sejam ambientalmente e socialmente responsáveis.
 
-  <center><img src=solarpunk6.png></center>
+  <center><img src=solarpunk6.jpg></center>
   <p><b>A estética solarpunk</b>
 
 <p>A estética Solarpunk é altamente diversa, variando do punk e do cyberpunk ao steampunk e ao biopunk. Ela também se destaca por seu uso de tons de verde para expressar sua conexão com a natureza e o meio ambiente. A estética Solarpunk também usa elementos orgânicos e tecnológicos para expressar sua visão de um futuro mais sustentável e inclusivo. Ela combina elementos de diversos gêneros, como design de moda, arte, arquitetura, música e literatura, para criar um estilo único.
