--- a/Solarpunk2C.html
+++ b/Solarpunk2C.html
@@ -54,9 +54,9 @@ acredita que usar os recursos naturais de forma responsável, com base na
   <p>
 </p></td>
 <td>
-<center><img src="Solarpunk_arquivos/solarpunk4.png"></center></td>
+<center><img src="solarpunk4.png"></center></td>
 <tr>
-<td><center><img src="Solarpunk_arquivos/solarpunk3.png"></center></td>
+<td><center><img src="solarpunk3.png"></center></td>
   <td>
  <p><p><b>o que é a agricultura orgânica?</b>
 
@@ -116,9 +116,9 @@ ferramenta útil para desenvolver e ajustar modelos de negócios que sejam
  ambientalmente e socialmente responsáveis.</p><p></td>
  <td>
 
-  </p><center><img src="Solarpunk_arquivos/solarpunk6.jpg"></center></td>
+  </p><center><img src="solarpunk6.jpg"></center></td>
   <tr>
-    <td><center><img src="Solarpunk_arquivos/solarpunk1.png"></center></td>
+    <td><center><img src="solarpunk1.png"></center></td>
     <td>
   <p><p><b>A estética solarpunk</b>
 
