--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   body{
     background-image: linear-gradient(#8ccce7, #a3dda3);
-    
+    margin: 10px 0px 0px 0px;
   }
   div {
     border: 0px solid;
@@ -45,8 +45,27 @@
     background-color: #ffffdd;
     align: center;
     }
-  
-
+  footer{
+    background-color:rgba(0,0,0,0.2);
+    margin: 10px 0px 0px 0px;
+    text-align: center;
+    padding: 5px;
+  }
+  a{
+    font-family: sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    color:#dddd33;
+    text-decoration: none;
+    margin: 10px;
+    animation-name: example2;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  }
+  @keyframes example2 {
+  0%   {color:#dddd33;}
+  25%  {color:#ffffff}
+  100% {color:#dddd33;}
 
   td{
     padding: 20px;
@@ -93,7 +112,7 @@ diversidade, a comunidade e a cooperação.</h2>
 
 <tr>
   <td>
-    <img src="solarpunk1.png" align="left">
+    <img src="Solarpunk_arquivos/solarpunk1.png" align="left">
 <p>A literatura Cyberpunk é um gênero de ficção científica que se 
 concentra na interação entre a tecnologia e a cultura. Ela usa elementos
  futuristas, como computadores, inteligência artificial e realidade 
@@ -137,7 +156,7 @@ acredita que usar os recursos naturais de forma responsável, com base na
 </td>
 <tr>
   <td>
-<img src="solarpunk3.png" align="right">
+<img src="Solarpunk_arquivos/solarpunk3.png" align="right">
  <h3>O que é a agricultura orgânica?</h3>
 
 <p>A agricultura orgânica é um sistema de produção alimentar que se 
@@ -199,7 +218,7 @@ ferramenta útil para desenvolver e ajustar modelos de negócios que sejam
   <tr>
     
     <td>
-      <img src="solarpunk6.jpg" align="right">
+      <img src="Solarpunk_arquivos/solarpunk6.jpg" align="right">
        <h3>A estética solarpunk</h3>
 
 <p>A estética Solarpunk é altamente diversa, variando do punk e do 
@@ -240,5 +259,11 @@ mistura única de elementos tecnológicos e culturais que trabalham juntos
 </tr>
 </table>
 </div></center>
+<footer>
+  <a href="https://www.canva.com/design/DAE9OvT5O50/1BEmciB6TmECU2BkdqUwFw/view?website#2">RPG</a>
+  <a href="https://store.steampowered.com/app/1805110/Solarpunk/"> Jogo</a>
+  <a href="https://www.google.com.br/books/edition/Como_aprendi_a_amar_o_futuro/SV-mEAAAQBAJ?hl=pt-BR&gbpv=1&dq=solarpunk&printsec=frontcover"> Livro</a>
+  <a href="https://www.youtube.com/watch?v=AzTvd1PmZVA">Arquitetura</a>
+</footer>
 </body>
 </html>
