--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ diversidade, a comunidade e a cooperação.</h2>
 <tr>
   <td>
     
-<p><img src="Solarpunk_arquivos/solarpunk1.png">A literatura Cyberpunk é um gênero de ficção científica que se 
+<p><img src="solarpunk1.png">A literatura Cyberpunk é um gênero de ficção científica que se 
 concentra na interação entre a tecnologia e a cultura. Ela usa elementos
  futuristas, como computadores, inteligência artificial e realidade 
 virtual, para expressar sua conexão com a tecnologia. A literatura 
@@ -186,7 +186,7 @@ acredita que usar os recursos naturais de forma responsável, com base na
 </td></tr>
 <tr>
   <td>
-<img src="Solarpunk_arquivos/solarpunk3.png">
+<img src="solarpunk3.png">
  <h3>O que é a agricultura orgânica?</h3>
 
 <p>A agricultura orgânica é um sistema de produção alimentar que se 
@@ -216,7 +216,7 @@ comunicação entre os governos e os cidadãos.</p>
 </td></tr>
   <tr>
     <td>
-      <img src="Solarpunk_arquivos/solarpunk4.png">
+      <img src="solarpunk4.png">
   <h3>O que é empreendedorismo criativo?</h3>
 
 <p>O empreendedorismo criativo é um processo de desenvolvimento de negócios
@@ -248,7 +248,7 @@ ferramenta útil para desenvolver e ajustar modelos de negócios que sejam
   <tr>
     
     <td>
-      <img src="Solarpunk_arquivos/solarpunk6.jpg">
+      <img src="solarpunk6.jpg">
        <h3>A estética solarpunk</h3>
 
 <p>A estética Solarpunk é altamente diversa, variando do punk e do 
